--- a/vignettes/starting.Rmd
+++ b/vignettes/starting.Rmd
@@ -196,7 +196,7 @@ knitr::include_graphics("panes3.png")
 If I've planned this semester properly, all the functions you will need are mentioned in the documentation of the `umncvmstats` package, that is, the files you're reading right now.
 
 
-For further help, especially about parameters, we can look up the help file for a specific function using `?`. This works great -- if you happen to remember the name of the function. For example, to get help on the `read_csv` function (which we'll see soon), try typing this in the console:
+For further help, especially about function arguments, we can look up the help file for a specific function using `?`. This works great -- if you happen to remember the name of the function. For example, to get help on the `read_csv` function (which we'll see soon), try typing this in the console:
 
 ```{r}
 #| eval: false
@@ -246,7 +246,7 @@ Most of the time, we'll use R **functions**; for example, the `mean` function. H
 mean(a)
 ```
 
-We pass values to a function by putting them in parentheses after the function name; there can be multiple parameters (separated by a comma), and they can be named (by using a single equals sign`=`). For example, if there were missing values (`NA`) in our data, the mean would be undefined, unless we specifically told R to remove the missing values first by setting the `na.rm` parameter to `TRUE`. (Best practice is to always write out `TRUE` and `FALSE` with all caps.)
+We pass values to a function by putting them in parentheses after the function name; there can be multiple arguments (separated by a comma), and they can be named (by using a single equals sign`=`). For example, if there were missing values (`NA`) in our data, the mean would be undefined, unless we specifically told R to remove the missing values first by setting the `na.rm` argument to `TRUE`. (Best practice is to always write out `TRUE` and `FALSE` with all caps.)
 
 ```{r}
 a2 <- c(1, 2, 3, 4, NA)
@@ -254,7 +254,7 @@ mean(a2)
 mean(a2, na.rm=TRUE)
 ```
 
-We'll also use functions by using the "pipe" operator, `|>`. Think of it as a triangle that sends the thing on the left into the function on the right, as the first parameter. Additional parameters can be included too. Note that we still need the parenthesis, whether or not we have additional parameters. This makes it easy to chain results of functions together into new functions.
+We'll also use functions by using the "pipe" operator, `|>`. Think of it as a triangle that sends the thing on the left into the function on the right, as the first argument. Additional arguments can be included too. Note that we still need the parenthesis, whether or not we have additional arguments. This makes it easy to chain results of functions together into new functions.
 
 ```{r}
 a |> mean()
