refer to getting started vignette

--- a/README.Rmd
+++ b/README.Rmd
@@ -20,17 +20,8 @@ knitr::opts_chunk$set(
 
 The umncvmstats package standardizes the function usage and the output for basic statistical functions to allow new R users to focus on learning the principles of statistics and statistical communication rather than on the details of R.
 
-## Installation
+For installation instructions and a basic overview of using R, see the [Getting Started](https://aaronrendahl.github.io/umncvmstats/articles/starting.html) article.
 
-You can install the most up-to-date version of umncvmstats from [GitHub](https://github.com/AaronRendahl/umncvmstats) with:
-
-``` r
-# install.packages("devtools")
-devtools::install_github("AaronRendahl/umncvmstats")
-```
-
-## Documentation
-
-See the [articles](https://aaronrendahl.github.io/umncvmstats/articles/index.html) for more details.
+See additional [articles](https://aaronrendahl.github.io/umncvmstats/articles/index.html) for more details.
 
 
